--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -42,11 +42,16 @@
   doi={10.1109/SC.2014.18}
 }
 
-@software{slurm,
+@inproceedings{slurm,
   title={{SLURM}: Simple Linux Utility for Resource Management},
   author={Yoo, Andy B and Jette, Morris A and Grondona, Mark},
+  booktitle={Job Scheduling Strategies for Parallel Processing},
+  series={Lecture Notes in Computer Science},
+  volume={2862},
+  pages={44--60},
   year={2003},
-  url={https://slurm.schedmd.com/}
+  publisher={Springer},
+  doi={10.1007/10968987_3}
 }
 
 @article{pytorch,
