--- a/paper/nomade-jors-paper.tex
+++ b/paper/nomade-jors-paper.tex
@@ -46,7 +46,7 @@ into two categories: enterprise IT solutions and HPC-specific tools,
 each with distinct trade-offs.
 
 Enterprise monitoring solutions like Prometheus \cite{prometheus},
-Grafana, and Nagios provide mature, feature-rich platforms but require
+Grafana \cite{grafana}, and Nagios \cite{nagios} provide mature, feature-rich platforms but require
 significant infrastructure---database servers, message queues, and
 dedicated hardware---that may be impractical for small-to-medium HPC
 centers. These tools target general IT workloads and lack native
@@ -300,6 +300,14 @@ DOI: \url{https://doi.org/10.1007/978-3-319-58667-0_19}
 Vilhena, D.A., Antonelli, A. (2015). A network approach for identifying
 and delimiting biogeographical regions. Nature Communications 6:6848.
 DOI: \url{https://doi.org/10.1038/ncomms7848}
+
+\bibitem{grafana}
+Grafana Labs (2014--present). Grafana: The open observability platform.
+URL: \url{https://grafana.com/}
+
+\bibitem{nagios}
+Galstad, E. (1999--present). Nagios: The industry standard in IT
+infrastructure monitoring. URL: \url{https://www.nagios.org/}
 
 \end{thebibliography}
 
