feat(edu): improve figure layout and error messages
- Combined edu figure with all three commands
- Standardized figure heights (explain/report: 7cm, trajectory: width-based)
- Added helpful hints when database not found
- Text wrapping for recommendations

--- a/paper/nomade-jors-paper.tex
+++ b/paper/nomade-jors-paper.tex
@@ -191,13 +191,13 @@ requested 4 cores but used $\sim$1. Try: \texttt{\#SBATCH --ntasks=1}.''
 \begin{figure}[htbp]
 \centering
 
-\begin{minipage}[t]{0.48\textwidth}
+\begin{minipage}[t]{0.45\textwidth}
 \centering
-\includegraphics[width=\textwidth]{figures/edu_explain.png}
+\includegraphics[height=7cm]{figures/edu_explain.png}
 \texttt{nomade edu explain 1104}
 \end{minipage}
 \hfill
-\begin{minipage}[t]{0.48\textwidth}
+\begin{minipage}[t]{0.45\textwidth}
 \centering
 \includegraphics[width=\textwidth]{figures/edu_trajectory.png}
 \texttt{nomade edu trajectory alice}
@@ -205,9 +205,9 @@ requested 4 cores but used $\sim$1. Try: \texttt{\#SBATCH --ntasks=1}.''
 
 \vspace{0.5cm}
 
-\begin{minipage}[t]{0.65\textwidth}
+\begin{minipage}[t]{0.45\textwidth}
 \centering
-\includegraphics[width=\textwidth]{figures/edu_report.png}
+\includegraphics[height=7cm]{figures/edu_report.png}
 \texttt{nomade edu report cs101}
 \end{minipage}
 
