--- a/paper/nomad-jors-paper.tex
+++ b/paper/nomad-jors-paper.tex
@@ -144,36 +144,37 @@ NØMAD provides a real-time web dashboard for monitoring cluster health and job 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.95\textwidth]{figures/dashboard.png}
-\caption{NØMAD web dashboard showing real-time cluster status. Top left displays compute partition metrics, top right shows high-memory partition status, bottom left presents GPU partition health, and bottom right visualizes the job similarity network. The interface provides at-a-glance monitoring for HPC administrators.}
+\caption{NØMAD web dashboard in light theme showing real-time cluster status. The main view displays three partitions (compute, highmem, gpu) with node health rings indicating CPU utilization. The sidebar shows detailed statistics for the selected node including job counts, resource utilization, and top users.}
 \label{fig:dashboard}
 \end{figure}
 
-The dashboard includes partition-specific views that allow administrators to monitor different resource types independently (Figure~\ref{fig:partitions}). Each partition view displays relevant metrics: CPU utilization and memory pressure for compute partitions, GPU temperature and VRAM usage for GPU partitions, and memory allocation patterns for high-memory partitions.
+The dashboard provides additional analytics views for resource tracking and infrastructure monitoring. The resource analytics view (Figure~\ref{fig:resources}) shows CPU and GPU usage by group and user, job submission patterns as a heatmap, and active interactive computing sessions. The infrastructure monitoring view (Figure~\ref{fig:infrastructure}) extends visibility to departmental workstations and storage servers, enabling correlation of job failures with infrastructure-wide issues.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.75\textwidth]{figures/compute.png}
-
-\vspace{0.2cm}
-\includegraphics[width=0.75\textwidth]{figures/gpu.png}
-
-\vspace{0.2cm}
-\includegraphics[width=0.75\textwidth]{figures/highmem.png}
-\caption{Partition-specific dashboard views showing compute (top, 6-node partition with CPU utilization), GPU (middle, 2-node partition with GPU metrics), and high-memory (bottom, 2-node partition optimized for memory-intensive jobs). Each view displays node health rings, job statistics, and resource utilization bars specific to the partition type.}
-\label{fig:partitions}
+\includegraphics[width=0.85\textwidth]{figures/resource-analytics.png}
+\caption{Resource analytics views. \textbf{Top}: Resource usage summary showing CPU-hours, GPU-hours, and usage breakdown by group and user. \textbf{Middle}: Activity heatmap displaying job submissions by day and hour, revealing usage patterns (busiest: Monday 11:00). \textbf{Bottom}: Interactive computing sessions showing active RStudio and Jupyter sessions with memory usage and session age.}
+\label{fig:resources}
 \end{figure}
 
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.85\textwidth]{figures/infrastructure.png}
+\caption{Infrastructure monitoring views. \textbf{Top}: Workstation overview showing departmental machines (Biology, Chemistry, Physics, Math/CS) with status, CPU load, memory, disk usage, and logged-in users. \textbf{Bottom}: Storage overview displaying NFS servers with capacity, usage, ZFS pool health, and connected clients.}
+\label{fig:infrastructure}
+\end{figure}
 \subsection*{Job Similarity Network}
 A distinguishing feature of NØMAD is the job similarity network visualization (Figure~\ref{fig:network}). Jobs are represented as nodes in a 3D space defined by their I/O characteristics: NFS write ratio, local write volume, and I/O wait percentage. When full job metrics are available, edges connect jobs with cosine similarity $\geq 0.7$ based on their feature vectors.
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.8\textwidth]{figures/network.png}
-\caption{Three-dimensional job similarity network visualization. Jobs are positioned by their I/O behavior (NFS writes, local writes, I/O wait) and colored by health score (green = healthy, red = failed). Clustering reveals failure patterns: jobs in the high-NFS, high-I/O-wait region show elevated failure rates compared to jobs using local storage.}
+\caption{Job similarity network visualization with feature variance analysis. The 3D view shows jobs colored by outcome (green=completed, red=failed, orange=timeout, purple=OOM). The left panel displays feature variance statistics sorted by coefficient of variation (CV); high CV values for exit\_signal and failure\_reason (exceeding 200\%) reflect normal cluster operation where most jobs succeed. The legend shows job outcome distribution across 1000 jobs.}
 \label{fig:network}
 \end{figure}
 
-This visualization reveals how failures cluster in specific regions of the feature space. Jobs in the ``danger zone'' (high NFS ratio, high I/O wait) show significantly higher failure rates than jobs in the ``safe zone'' (low NFS ratio, high local writes). Because these patterns emerge from historical data rather than predefined rules, the system can discover site-specific failure modes and provide targeted recommendations to users (e.g., ``jobs with your I/O pattern have a 72\% failure rate---consider using local scratch instead of NFS'').
+The feature variance panel helps administrators verify normal cluster operation and identify which metrics contribute most to failure prediction.
 
 \subsection*{Quality Control}
 NØMAD includes a comprehensive test suite covering unit tests for collectors, feature engineering, and ML components; integration tests for the full data pipeline; a demo mode (\texttt{nomad demo}) that generates synthetic HPC data for testing without requiring a real cluster; and continuous integration via GitHub Actions.
